Pointing to qa4 elastic search URL

--- a/branches/portfolio/service/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/branches/portfolio/service/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -1,4 +1,5 @@
-elasticsearch.url=http://internal-SGX-ElasticsearchLoadBalancer-596550831.us-east-1.elb.amazonaws.com:9200
+elasticsearch.url=http://ec2-54-234-162-48.compute-1.amazonaws.com:9200
+#elasticsearch.url=http://internal-SGX-ElasticsearchLoadBalancer-596550831.us-east-1.elb.amazonaws.com:9200
 #elasticsearch.url=http://internal-SGX-ELasticsearchLB-QA2-1156180289.us-east-1.elb.amazonaws.com:9200
 database.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #database.url=jdbc:sqlserver://sgx-uat.ccqe0wbnbfwr.us-east-1.rds.amazonaws.com:1433;databaseName=sgx;
