--- a/data/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/data/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -1,6 +1,6 @@
-elasticsearch.url=http://internal-SGX-ELasticsearchLB-QA2-1156180289.us-east-1.elb.amazonaws.com:9200
-	
-#elasticsearch.url=SGX-QA2-ElasticSearchLB-1210235919.us-east-1.elb.amazonaws.com:9200
+#elasticsearch.url=http://internal-SGX-ELasticsearchLB-QA2-1156180289.us-east-1.elb.amazonaws.com:9200
+
+elasticsearch.url=http://ec2-54-226-16-47.compute-1.amazonaws.com:9200
 
 #Cron expression must consist of 6 fields
 loader.cron=0 50 18 ? * * 
