--- a/trunk/data/src/main/resources/META-INF/properties/prod-sing.application.properties
+++ b/trunk/data/src/main/resources/META-INF/properties/prod-sing.application.properties
@@ -20,3 +20,28 @@ loader.adjustment-factor.dir=adjustment-factor
 
 loader.ftp.baseFiles=companies.csv,currencies.csv,fx-conversion.csv,notfound.csv
 loader.ftp.rawFiles=company-data.csv,consensus-estimates.csv,dividend-history.csv,key-devs.csv,ownership.csv,adjustment-factor.csv
+
+loader.currencies.file=/mnt/data/qa-currencies.csv
+
+
+email.site.base=https://sgx2.sharefc.com/iframe.html
+email.base=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com
+email.sender=sgx-noreply@wealthmsi.com
+email.dataload.complete=SGXSupport@dstsystems.com
+
+mail.host=email-smtp.us-east-1.amazonaws.com
+mail.user=AKIAILM2MCZLWH6LLBWQ
+mail.password=AlxnDsap3lIu9w2Zfsvvs4ypqd8YwGFu3bkf4v4j6794
+
+
+database.url=jdbc:sqlserver://sgx-premium.cm6urgb3hjj2.ap-southeast-1.rds.amazonaws.com:1433;databaseName=sgx;
+database.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+database.user=sgx 
+database.password=SGXPremiumData$
+database.initialSize=100
+database.maxTotal=100
+database.maxIdle=100
+
+mail.host=email-smtp.us-east-1.amazonaws.com
+mail.user=AKIAILM2MCZLWH6LLBWQ
+mail.password=AlxnDsap3lIu9w2Zfsvvs4ypqd8YwGFu3bkf4v4j6794
