--- a/trunk/data/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/trunk/data/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -1,8 +1,8 @@
-elasticsearch.url=http://internal-SGX-ElasticsearchLoadBalancer-596550831.us-east-1.elb.amazonaws.com:9200
-#Cron expression must consist of 6 fields
+elasticsearch.url=http://ec2-54-234-162-48.compute-1.amazonaws.com:9200
+   
 loader.cron=0 50 18 ? * * 
 
-loader.fx.fxBatchSize=70000
+loader.fx.fxBatchSize=80000
 loader.gti.url=https://s3.amazonaws.com/fecs-prod-triggers/sgx/prod-us/uploads/gti.csv
 
 #Please make sure there is no space at the end of property
@@ -18,3 +18,29 @@ loader.ticker.file=/mnt/data/qa-companies.csv
 
 loader.ftp.baseFiles=qa-companies.csv,qa-currencies.csv,qa-fx-conversion.csv,qa-notfound.csv
 loader.ftp.rawFiles=qa-company-data.csv,qa-consensus-estimates.csv,qa-dividend-history.csv,qa-key-devs.csv,qa-ownership.csv,qa-adjustment-factor.csv
+
+
+
+loader.currencies.file=/mnt/data/qa-currencies.csv
+
+
+email.site.base=https://sgx2.sharefc.com/iframe.html
+email.base=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com
+email.sender=sgx-noreply@wealthmsi.com
+email.dataload.complete=nprabha@dstsystems.com
+
+mail.host=email-smtp.us-east-1.amazonaws.com
+mail.user=AKIAILM2MCZLWH6LLBWQ
+mail.password=AlxnDsap3lIu9w2Zfsvvs4ypqd8YwGFu3bkf4v4j6794
+
+database.url=jdbc:sqlserver://sgx-qa2.ccqe0wbnbfwr.us-east-1.rds.amazonaws.com:1433;databaseName=sgx;
+database.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+database.user=sgx_qa2 
+database.password=SGXPremiumData$
+database.initialSize=100
+database.maxTotal=100
+database.maxIdle=100
+
+mail.host=email-smtp.us-east-1.amazonaws.com
+mail.user=AKIAILM2MCZLWH6LLBWQ
+mail.password=AlxnDsap3lIu9w2Zfsvvs4ypqd8YwGFu3bkf4v4j6794
