--- a/trunk/data/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/trunk/data/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -1,8 +1,8 @@
-elasticsearch.url=http://ec2-54-234-162-48.compute-1.amazonaws.com:9200
+elasticsearch.url=http://internal-SGX-ElasticsearchLoadBalancer-596550831.us-east-1.elb.amazonaws.com:9200
    
 loader.cron=0 50 18 ? * * 
 
-loader.fx.fxBatchSize=80000
+loader.fx.fxBatchSize=70000
 loader.gti.url=https://s3.amazonaws.com/fecs-prod-triggers/sgx/prod-us/uploads/gti.csv
 
 #Please make sure there is no space at the end of property
@@ -27,7 +27,7 @@ loader.currencies.file=/mnt/data/qa-currencies.csv
 email.site.base=https://sgx2.sharefc.com/iframe.html
 email.base=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com
 email.sender=sgx-noreply@wealthmsi.com
-email.dataload.complete=nprabha@dstsystems.com
+email.dataload.complete=SGXSupport@dstsystems.com
 
 mail.host=email-smtp.us-east-1.amazonaws.com
 mail.user=AKIAILM2MCZLWH6LLBWQ
