--- a/trunk/data/src/main/resources/META-INF/properties/application.properties
+++ b/trunk/data/src/main/resources/META-INF/properties/application.properties
@@ -15,6 +15,16 @@ elasticsearch.previousDay.index.alias=sgd_premium_previous
 
 elasticsearch.index.liveIndexes=sgx,sgx_premium,sgx_premium_previous,sgd_premium,sgd_premium_previous,usd_premium,hkd_premium,idr_premium,myr_premium,php_premium,thb_premium,twd_premium
 
+database.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+database.url=jdbc:sqlserver://localhost:1433;databaseName=sgx;
+database.user=sa
+database.password=P@ssw0rd12
+database.initialSize=10
+database.maxTotal=10
+database.maxIdle=10
+database.validationQuery=SELECT 1
+database.maxConnLifetimeMillis=480000
+
 
 loader.company-data.dir=company-data
 loader.consensus-estimates.dir=consensus-estimates
@@ -23,7 +33,7 @@ loader.key-devs.dir=key-devs
 loader.ownership.dir=ownership
 loader.adjustment-factor.dir=adjustment-factor
 
-loader.threads=25
+loader.threads=1
 loader.cron=0 50 18 ? * *
 loader.workdir=/tmp/sgx/
 
@@ -52,3 +62,14 @@ loader.ftp.baseFiles=companies.csv,currencies.csv,fx-conversion.csv,notfound.csv
 loader.ftp.rawFiles=company-data.csv,consensus-estimates.csv,dividend-history.csv,key-devs.csv,ownership.csv,adjustment-factor.csv
 loader.vwap.url=http://infopub.sgx.com/SitePages/StockNIndices_SnPValVol.aspx
 loader.gti.url=https://s3.amazonaws.com/fecs-prod-triggers/sgx/dev/uploads/gti.csv
+loader.currencies.file=/mnt/data/currencies.csv
+
+
+email.site.base=https://sgx2.sharefc.com/iframe.html
+email.base=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com
+email.sender=sgx-noreply@wealthmsi.com
+email.dataload.complete=someone@dstsystems.com
+
+mail.host=email-smtp.us-east-1.amazonaws.com
+mail.user=AKIAILM2MCZLWH6LLBWQ
+mail.password=AlxnDsap3lIu9w2Zfsvvs4ypqd8YwGFu3bkf4v4j6794
