Created portfolio_backup from branches/portfolio

--- a/data/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/data/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -1,4 +1,6 @@
-elasticsearch.url=http://internal-SGX-ElasticsearchLoadBalancer-596550831.us-east-1.elb.amazonaws.com:9200
+#elasticsearch.url=http://internal-SGX-ELasticsearchLB-QA2-1156180289.us-east-1.elb.amazonaws.com:9200
+
+elasticsearch.url=http://ec2-54-234-162-48.compute-1.amazonaws.com:9200
    
 loader.cron=0 50 18 ? * * 
 
@@ -6,22 +8,22 @@ loader.fx.fxBatchSize=70000
 loader.gti.url=https://s3.amazonaws.com/fecs-prod-triggers/sgx/prod-us/uploads/gti.csv
 
 #Please make sure there is no space at the end of property
-loader.company-data.dir=qa-company-data
-loader.consensus-estimates.dir=qa-consensus-estimates
-loader.dividend-history.dir=qa-dividend-history
-loader.key-devs.dir=qa-key-devs
-loader.ownership.dir=qa-ownership
-loader.adjustment-factor.dir=qa-adjustment-factor
+loader.company-data.dir=qa-noidr-company-data
+loader.consensus-estimates.dir=qa-noidr-consensus-estimates
+loader.dividend-history.dir=qa-noidr-dividend-history
+loader.key-devs.dir=qa-noidr-key-devs
+loader.ownership.dir=qa-noidr-ownership
+loader.adjustment-factor.dir=qa-noidr-adjustment-factor
 
-loader.fx.file=/mnt/data/qa-fx-conversion.csv
-loader.ticker.file=/mnt/data/qa-companies.csv
+loader.fx.file=/mnt/data/qa-noidr-fx-conversion.csv
+loader.ticker.file=/mnt/data/qa-noidr-companies.csv
 
-loader.ftp.baseFiles=qa-companies.csv,qa-currencies.csv,qa-fx-conversion.csv,qa-notfound.csv
-loader.ftp.rawFiles=qa-company-data.csv,qa-consensus-estimates.csv,qa-dividend-history.csv,qa-key-devs.csv,qa-ownership.csv,qa-adjustment-factor.csv
+loader.ftp.baseFiles=qa-noidr-companies.csv,qa-noidr-currencies.csv,qa-noidr-fx-conversion.csv,qa-noidr-notfound.csv
+loader.ftp.rawFiles=qa-noidr-company-data.csv,qa-noidr-consensus-estimates.csv,qa-noidr-dividend-history.csv,qa-noidr-key-devs.csv,qa-noidr-ownership.csv,qa-noidr-adjustment-factor.csv
 
 
 
-loader.currencies.file=/mnt/data/qa-currencies.csv
+loader.currencies.file=/mnt/data/qa-noidr-currencies.csv
 
 
 email.site.base=https://sgx2.sharefc.com/iframe.html
@@ -33,9 +35,9 @@ mail.host=email-smtp.us-east-1.amazonaws.com
 mail.user=AKIAILM2MCZLWH6LLBWQ
 mail.password=AlxnDsap3lIu9w2Zfsvvs4ypqd8YwGFu3bkf4v4j6794
 
-database.url=jdbc:sqlserver://sgx-uat.ccqe0wbnbfwr.us-east-1.rds.amazonaws.com:1433;databaseName=sgx;
+database.url=jdbc:sqlserver://sgx-qa2.ccqe0wbnbfwr.us-east-1.rds.amazonaws.com:1433;databaseName=sgx;
 database.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-database.user=sgx_uat 
+database.user=sgx_qa2 
 database.password=SGXPremiumData$
 database.initialSize=100
 database.maxTotal=100
