--- a/service/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/service/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -1,8 +1,10 @@
-elasticsearch.url=http://internal-SGX-ElasticsearchLoadBalancer-596550831.us-east-1.elb.amazonaws.com:9200
-
+elasticsearch.url=http://ec2-54-226-16-47.compute-1.amazonaws.com:9200
+#elasticsearch.url=http://internal-SGX-ElasticsearchLoadBalancer-596550831.us-east-1.elb.amazonaws.com:9200
+#elasticsearch.url=http://internal-SGX-ELasticsearchLB-QA2-1156180289.us-east-1.elb.amazonaws.com:9200
 database.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-database.url=jdbc:sqlserver://sgx-uat.ccqe0wbnbfwr.us-east-1.rds.amazonaws.com:1433;databaseName=sgx;
-database.user=sgx_uat 
+#database.url=jdbc:sqlserver://sgx-uat.ccqe0wbnbfwr.us-east-1.rds.amazonaws.com:1433;databaseName=sgx;
+database.url=jdbc:sqlserver://sgx-qa2.ccqe0wbnbfwr.us-east-1.rds.amazonaws.com:1433;databaseName=sgx;
+database.user=sgx_qa2
 database.password=SGXPremiumData$
 database.initialSize=100
 database.maxTotal=100
@@ -14,15 +16,15 @@ mail.password=AlxnDsap3lIu9w2Zfsvvs4ypqd8YwGFu3bkf4v4j6794
 
 currencies.file.location=/mnt/data/currencies.csv
 
-email.site.base=https://sgx2.sharefc.com/iframe.html
-email.base=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com
+email.site.base=https://sgx-us-2-ui-1986936734.us-east-1.elb.amazonaws.com/iframe.html
+email.base=http://sgxqa2.sharefc.com.s3-website-us-east-1.amazonaws.com
 email.sender=sgx-noreply@wealthmsi.com
-email.verify.email=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/verify.html
-email.reset.password=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/reset.html
-email.reset.confirm=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/confirm.html
-email.halfway.expiration.notice=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/halfway.html
-email.trialExpired.notice=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/expired.html
-email.watchlist.alert=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/alerts.html
+email.verify.email=http://sgxqa2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/verify.html
+email.reset.password=http://sgxqa2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/reset.html
+email.reset.confirm=http://sgxqa2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/confirm.html
+email.halfway.expiration.notice=http://sgxqa2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/halfway.html
+email.trialExpired.notice=http://sgxqa2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/expired.html
+email.watchlist.alert=http://sgxqa2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/alerts.html
 email.cachable=true
 email.cachable.duration=3600000
 
@@ -32,18 +34,17 @@ email.watchlist.alert.auditAndSendEmail=true
 enets.merchant.id=897964002
 enets.sales.amount=1000
 #in cents in SGD, 1000 = $10.00
-enets.success.endpoint=https://sgx2.sharefc.com/sgx/purchase/success
-enets.success.redirect=https://sgx2.sharefc.com/iframe.html?page=22
-enets.fail.endpoint=https://sgx2.sharefc.com/sgx/purchase/fail
-enets.fail.redirect=https://sgx2.sharefc.com/iframe.html?page=22
-enets.cancel.endpoint=https://sgx2.sharefc.com/sgx/purchase/cancel
-enets.cancel.redirect=https://sgx2.sharefc.com/iframe.html?page=22
+enets.success.endpoint=https://sgxqa2.sharefc.com/sgx/purchase/success
+enets.success.redirect=https://sgxqa2.sharefc.com/iframe.html?page=22
+enets.fail.endpoint=https://sgxqa2.sharefc.com/sgx/purchase/fail
+enets.fail.redirect=https://sgxqa2.sharefc.com/iframe.html?page=22
+enets.cancel.endpoint=https://sgxqa2.sharefc.com/sgx/purchase/cancel
+enets.cancel.redirect=https://sgxqa2.sharefc.com/iframe.html?page=22
 
 #Quartz Timers
 quartz.expired.email=0 0 17 1/1 * ? *
 quartz.halfway.email=0 30 18 1/1 * ? *
 quartz.watchlist.email=0 0 23 1/1 * ? *
-
 
 #RSA key files path
 rsakey.filepath.public=/mnt/sgx-login-keys/login-key.pub
