--- a/xf-export/XFDataDump/XFDataDump/XFDataDump.csproj
+++ b/xf-export/XFDataDump/XFDataDump/XFDataDump.csproj
@@ -107,9 +107,7 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="packages.config" />
     <None Include="Properties\app.manifest">
       <SubType>Designer</SubType>
     </None>
