--- a/branches/trunk-4-testing-898/service/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/branches/trunk-4-testing-898/service/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -1,8 +1,8 @@
 elasticsearch.url=http://ec2-54-234-162-48.compute-1.amazonaws.com:9200
 
+database.url=jdbc:sqlserver://sgx-qa2.ccqe0wbnbfwr.us-east-1.rds.amazonaws.com:1433;databaseName=sgx;
 database.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-database.url=jdbc:sqlserver://sgx-uat.ccqe0wbnbfwr.us-east-1.rds.amazonaws.com:1433;databaseName=sgx;
-database.user=sgx_uat 
+database.user=sgx_qa2 
 database.password=SGXPremiumData$
 database.initialSize=100
 database.maxTotal=100
