QA2 Updated Ticker information for testing 1072

--- a/branches/portfolio/data/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/branches/portfolio/data/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -8,22 +8,22 @@ loader.fx.fxBatchSize=70000
 loader.gti.url=https://s3.amazonaws.com/fecs-prod-triggers/sgx/prod-us/uploads/gti.csv
 
 #Please make sure there is no space at the end of property
-loader.company-data.dir=qa-noidr-company-data
-loader.consensus-estimates.dir=qa-noidr-consensus-estimates
-loader.dividend-history.dir=qa-noidr-dividend-history
-loader.key-devs.dir=qa-noidr-key-devs
-loader.ownership.dir=qa-noidr-ownership
-loader.adjustment-factor.dir=qa-noidr-adjustment-factor
+loader.company-data.dir=qa-pf-updt-tker-company-data
+loader.consensus-estimates.dir=qa-pf-updt-tker-consensus-estimates
+loader.dividend-history.dir=qa-pf-updt-tker-dividend-history
+loader.key-devs.dir=qa-pf-updt-tker-key-devs
+loader.ownership.dir=qa-pf-updt-tker-ownership
+loader.adjustment-factor.dir=qa-pf-updt-tker-adjustment-factor
 
-loader.fx.file=/mnt/data/qa-noidr-fx-conversion.csv
-loader.ticker.file=/mnt/data/qa-noidr-companies.csv
+loader.fx.file=/mnt/data/qa-pf-updt-tker-fx-conversion.csv
+loader.ticker.file=/mnt/data/qa-pf-updt-tker-companies.csv
 
-loader.ftp.baseFiles=qa-noidr-companies.csv,qa-noidr-currencies.csv,qa-noidr-fx-conversion.csv,qa-noidr-notfound.csv
-loader.ftp.rawFiles=qa-noidr-company-data.csv,qa-noidr-consensus-estimates.csv,qa-noidr-dividend-history.csv,qa-noidr-key-devs.csv,qa-noidr-ownership.csv,qa-noidr-adjustment-factor.csv
+loader.ftp.baseFiles=qa-pf-updt-tker-companies.csv,qa-pf-updt-tker-currencies.csv,qa-pf-updt-tker-fx-conversion.csv,qa-pf-updt-tker-notfound.csv
+loader.ftp.rawFiles=qa-pf-updt-tker-company-data.csv,qa-pf-updt-tker-consensus-estimates.csv,qa-pf-updt-tker-dividend-history.csv,qa-pf-updt-tker-key-devs.csv,qa-pf-updt-tker-ownership.csv,qa-pf-updt-tker-adjustment-factor.csv
 
 
 
-loader.currencies.file=/mnt/data/qa-noidr-currencies.csv
+loader.currencies.file=/mnt/data/qa-pf-updt-tker-currencies.csv
 
 
 email.site.base=https://sgx2.sharefc.com/iframe.html
