Sending notifications for  start of dataload and currency change

--- a/branches/portfolio/data/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/branches/portfolio/data/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -8,22 +8,22 @@ loader.fx.fxBatchSize=70000
 loader.gti.url=https://s3.amazonaws.com/fecs-prod-triggers/sgx/prod-us/uploads/gti.csv
 
 #Please make sure there is no space at the end of property
-loader.company-data.dir=qa-pf-updt-tker-company-data
-loader.consensus-estimates.dir=qa-pf-updt-tker-consensus-estimates
-loader.dividend-history.dir=qa-pf-updt-tker-dividend-history
-loader.key-devs.dir=qa-pf-updt-tker-key-devs
-loader.ownership.dir=qa-pf-updt-tker-ownership
-loader.adjustment-factor.dir=qa-pf-updt-tker-adjustment-factor
+loader.company-data.dir=qa-company-data
+loader.consensus-estimates.dir=qa-consensus-estimates
+loader.dividend-history.dir=qa-dividend-history
+loader.key-devs.dir=qa-key-devs
+loader.ownership.dir=qa-ownership
+loader.adjustment-factor.dir=qa-adjustment-factor
 
-loader.fx.file=/mnt/data/qa-pf-updt-tker-fx-conversion.csv
-loader.ticker.file=/mnt/data/qa-pf-updt-tker-companies.csv
+loader.fx.file=/mnt/data/qa-fx-conversion.csv
+loader.ticker.file=/mnt/data/qa-companies.csv
 
-loader.ftp.baseFiles=qa-pf-updt-tker-companies.csv,qa-pf-updt-tker-currencies.csv,qa-pf-updt-tker-fx-conversion.csv,qa-pf-updt-tker-notfound.csv
-loader.ftp.rawFiles=qa-pf-updt-tker-company-data.csv,qa-pf-updt-tker-consensus-estimates.csv,qa-pf-updt-tker-dividend-history.csv,qa-pf-updt-tker-key-devs.csv,qa-pf-updt-tker-ownership.csv,qa-pf-updt-tker-adjustment-factor.csv
+loader.ftp.baseFiles=qa-companies.csv,qa-currencies.csv,qa-fx-conversion.csv,qa-notfound.csv
+loader.ftp.rawFiles=qa-company-data.csv,qa-consensus-estimates.csv,qa-dividend-history.csv,qa-key-devs.csv,qa-ownership.csv,qa-adjustment-factor.csv
 
 
 
-loader.currencies.file=/mnt/data/qa-pf-updt-tker-currencies.csv
+loader.currencies.file=/mnt/data/qa-currencies.csv
 
 
 email.site.base=https://sgx2.sharefc.com/iframe.html
