--- a/service/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/service/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -15,7 +15,7 @@ mail.password=AlxnDsap3lIu9w2Zfsvvs4ypqd8YwGFu3bkf4v4j6794
 
 currencies.file.location=/mnt/data/currencies.csv
 
-email.site.base=https://sgx2.sharefc.com/iframe.html
+email.site.base=https://sgx-us-2-ui-1986936734.us-east-1.elb.amazonaws.com/iframe.html
 email.base=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com
 email.sender=sgx-noreply@wealthmsi.com
 email.verify.email=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/verify.html
@@ -33,12 +33,12 @@ email.watchlist.alert.auditAndSendEmail=true
 enets.merchant.id=897964002
 enets.sales.amount=1000
 #in cents in SGD, 1000 = $10.00
-enets.success.endpoint=https://sgx2.sharefc.com/sgx/purchase/success
-enets.success.redirect=https://sgx2.sharefc.com/iframe.html?page=22
-enets.fail.endpoint=https://sgx2.sharefc.com/sgx/purchase/fail
-enets.fail.redirect=https://sgx2.sharefc.com/iframe.html?page=22
-enets.cancel.endpoint=https://sgx2.sharefc.com/sgx/purchase/cancel
-enets.cancel.redirect=https://sgx2.sharefc.com/iframe.html?page=22
+enets.success.endpoint=https://sgx-us-2-ui-1986936734.us-east-1.elb.amazonaws.com/sgx/purchase/success
+enets.success.redirect=https://sgx-us-2-ui-1986936734.us-east-1.elb.amazonaws.com/iframe.html?page=22
+enets.fail.endpoint=https://sgx-us-2-ui-1986936734.us-east-1.elb.amazonaws.com/sgx/purchase/fail
+enets.fail.redirect=https://sgx-us-2-ui-1986936734.us-east-1.elb.amazonaws.com/iframe.html?page=22
+enets.cancel.endpoint=https://sgx-us-2-ui-1986936734.us-east-1.elb.amazonaws.com/sgx/purchase/cancel
+enets.cancel.redirect=https://sgx-us-2-ui-1986936734.us-east-1.elb.amazonaws.com/iframe.html?page=22
 
 #Quartz Timers
 quartz.expired.email=0 0 17 1/1 * ? *
