--- a/branches/trunk-4-testing-898/service/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/branches/trunk-4-testing-898/service/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -16,14 +16,14 @@ mail.password=AlxnDsap3lIu9w2Zfsvvs4ypqd8YwGFu3bkf4v4j6794
 currencies.file.location=/mnt/data/currencies.csv
 
 email.site.base=https://sgx-us-2-ui-1986936734.us-east-1.elb.amazonaws.com/iframe.html
-email.base=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com
+email.base=http://sgx-us-2-ui-1986936734.us-east-1.elb.amazonaws.com
 email.sender=sgx-noreply@wealthmsi.com
-email.verify.email=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/verify.html
-email.reset.password=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/reset.html
-email.reset.confirm=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/confirm.html
-email.halfway.expiration.notice=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/halfway.html
-email.trialExpired.notice=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/expired.html
-email.watchlist.alert=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/alerts.html
+email.verify.email=http://sgx-us-2-ui-1986936734.us-east-1.elb.amazonaws.com/email/verify.html
+email.reset.password=http://sgx-us-2-ui-1986936734.us-east-1.elb.amazonaws.com/email/reset.html
+email.reset.confirm=http://sgx-us-2-ui-1986936734.us-east-1.elb.amazonaws.com/email/confirm.html
+email.halfway.expiration.notice=http://sgx-us-2-ui-1986936734.us-east-1.elb.amazonaws.com/email/halfway.html
+email.trialExpired.notice=http://sgx-us-2-ui-1986936734.us-east-1.elb.amazonaws.com/email/expired.html
+email.watchlist.alert=http://sgx-us-2-ui-1986936734.us-east-1.elb.amazonaws.com/email/alerts.html
 email.cachable=true
 email.cachable.duration=3600000
 
